{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 531,
  "lineage": "efa70088-1ac5-4f74-77ab-705a33227ad3",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:internet-gateway/igw-0c7a4b0c083ccd90f",
            "id": "igw-0c7a4b0c083ccd90f",
            "owner_id": "091570247959",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-igw",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-igw",
              "Project": "vprofile-project"
            },
            "vpc_id": "vpc-08d17be156d468e11"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "memcached-backend-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df2a11dd1fe1f8e3",
            "arn": "arn:aws:ec2:us-east-1:091570247959:instance/i-0bce854cc3172b73f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bce854cc3172b73f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "web-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bf834b3ca74a81ea",
            "private_dns": "ip-10-0-2-139.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-090c390888b8b2d00",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014c5dc35c59fc660",
            "tags": {
              "Environment": "dev",
              "Name": "memcached-backend-server",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "memcached-backend-server",
              "Project": "vprofile-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b827d2e980bf593e"
            ]
          },
          "dependencies": [
            "module.instances.aws_instance.mysql-backend-server",
            "module.instances.aws_instance.webapp-backend-server",
            "module.securitygroups.aws_security_group.backend-servers",
            "module.securitygroups.aws_security_group.frontend-servers",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql-backend-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df2a11dd1fe1f8e3",
            "arn": "arn:aws:ec2:us-east-1:091570247959:instance/i-062db8798cae8d125",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-062db8798cae8d125",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "web-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-032108c4503f1c385",
            "private_dns": "ip-10-0-2-210.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ee7c5c0a3b4ce76b",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014c5dc35c59fc660",
            "tags": {
              "Environment": "dev",
              "Name": "mysql-backend-server",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mysql-backend-server",
              "Project": "vprofile-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b827d2e980bf593e"
            ]
          },
          "dependencies": [
            "module.instances.aws_instance.webapp-backend-server",
            "module.securitygroups.aws_security_group.backend-servers",
            "module.securitygroups.aws_security_group.frontend-servers",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx-frontend-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:091570247959:instance/i-05a32e7704c03397b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a32e7704c03397b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "web-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fc7bc1e31041a7ae",
            "private_dns": "ip-10-0-1-200.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.200",
            "public_dns": "ec2-54-174-82-141.compute-1.amazonaws.com",
            "public_ip": "54.174.82.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08493d5ee34151da3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe0c5fae1bc32755",
            "tags": {
              "Environment": "dev",
              "Name": "nginx-frontend-server",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nginx-frontend-server",
              "Project": "vprofile-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a566b9ee752699e"
            ]
          },
          "dependencies": [
            "module.securitygroups.aws_security_group.frontend-servers",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "rabbitmq-backend-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df2a11dd1fe1f8e3",
            "arn": "arn:aws:ec2:us-east-1:091570247959:instance/i-07d101a3681315620",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d101a3681315620",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "web-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bbf7037220eb6e39",
            "private_dns": "ip-10-0-2-77.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09bbcd1ac0098fedc",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014c5dc35c59fc660",
            "tags": {
              "Environment": "dev",
              "Name": "rabbitmq-backend-server",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rabbitmq-backend-server",
              "Project": "vprofile-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b827d2e980bf593e"
            ]
          },
          "dependencies": [
            "module.instances.aws_instance.webapp-backend-server",
            "module.securitygroups.aws_security_group.backend-servers",
            "module.securitygroups.aws_security_group.frontend-servers",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp-backend-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df2a11dd1fe1f8e3",
            "arn": "arn:aws:ec2:us-east-1:091570247959:instance/i-0c97b90b880661feb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c97b90b880661feb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "web-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09fc13aaa3104ef46",
            "private_dns": "ip-10-0-2-16.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-017fdf4372d7851e6",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014c5dc35c59fc660",
            "tags": {
              "Environment": "dev",
              "Name": "webapp-backend-server",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "webapp-backend-server",
              "Project": "vprofile-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b827d2e980bf593e"
            ]
          },
          "dependencies": [
            "module.securitygroups.aws_security_group.backend-servers",
            "module.securitygroups.aws_security_group.frontend-servers",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_lb",
      "name": "vprofile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091570247959:loadbalancer/app/vprofile-alb/1eb99c97e376d91c",
            "arn_suffix": "app/vprofile-alb/1eb99c97e376d91c",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "vprofile-alb-816097405.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:091570247959:loadbalancer/app/vprofile-alb/1eb99c97e376d91c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vprofile-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01a566b9ee752699e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-014c5dc35c59fc660"
              },
              {
                "subnet_id": "subnet-0e9e63d09853311f2"
              },
              {
                "subnet_id": "subnet-0fe0c5fae1bc32755"
              }
            ],
            "subnets": [
              "subnet-014c5dc35c59fc660",
              "subnet-0e9e63d09853311f2",
              "subnet-0fe0c5fae1bc32755"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-08d17be156d468e11",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.securitygroups.aws_security_group.frontend-servers",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091570247959:listener/app/vprofile-alb/1eb99c97e376d91c/da30e265265c7e16",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:091570247959:targetgroup/vp-tg/97b72794d20b4bb1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091570247959:listener/app/vprofile-alb/1eb99c97e376d91c/da30e265265c7e16",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:091570247959:loadbalancer/app/vprofile-alb/1eb99c97e376d91c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instances.aws_lb.vprofile",
            "module.instances.aws_lb_target_group.test",
            "module.securitygroups.aws_security_group.frontend-servers",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091570247959:targetgroup/vp-tg/97b72794d20b4bb1",
            "arn_suffix": "targetgroup/vp-tg/97b72794d20b4bb1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091570247959:targetgroup/vp-tg/97b72794d20b4bb1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "vp-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08d17be156d468e11"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:091570247959:targetgroup/vp-tg/97b72794d20b4bb1-20240407154500035400000006",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:091570247959:targetgroup/vp-tg/97b72794d20b4bb1",
            "target_id": "i-0c97b90b880661feb"
          },
          "dependencies": [
            "module.instances.aws_instance.webapp-backend-server",
            "module.instances.aws_lb_target_group.test",
            "module.securitygroups.aws_security_group.backend-servers",
            "module.securitygroups.aws_security_group.frontend-servers",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ngw",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.ngw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f8901fbf816ee111",
            "domain": "vpc",
            "id": "eipalloc-0f8901fbf816ee111",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-200-219-172.compute-1.amazonaws.com",
            "public_ip": "52.200.219.172",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ngw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "module.ngw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f8901fbf816ee111",
            "association_id": "eipassoc-008fb9761c054ccb9",
            "connectivity_type": "public",
            "id": "nat-00ee9ddf2cd0ec167",
            "network_interface_id": "eni-08bd2b77870100df3",
            "private_ip": "10.0.1.141",
            "public_ip": "52.200.219.172",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fe0c5fae1bc32755",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-ngw",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-ngw",
              "Project": "vprofile-project"
            }
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.ngw.aws_eip.nat_eip",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-subnet",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:route-table/rtb-0b0fa13e3cc0f8a9e",
            "id": "rtb-0b0fa13e3cc0f8a9e",
            "owner_id": "091570247959",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00ee9ddf2cd0ec167",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-private-RT",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-private-RT",
              "Project": "vprofile-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d17be156d468e11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.ngw.aws_eip.nat_eip",
            "module.ngw.aws_nat_gateway.nat-gw",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-subnet",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:route-table/rtb-0292f90bf496b2305",
            "id": "rtb-0292f90bf496b2305",
            "owner_id": "091570247959",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7a4b0c083ccd90f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-public-RT",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-public-RT",
              "Project": "vprofile-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d17be156d468e11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1110f6df13fd6b2",
            "route_table_id": "rtb-0b0fa13e3cc0f8a9e",
            "subnet_id": "subnet-014c5dc35c59fc660"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.ngw.aws_eip.nat_eip",
            "module.ngw.aws_nat_gateway.nat-gw",
            "module.routeable.aws_route_table.private-subnet",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018ffad8c15a7b92c",
            "route_table_id": "rtb-0292f90bf496b2305",
            "subnet_id": "subnet-0fe0c5fae1bc32755"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.routeable.aws_route_table.public-subnet",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00efaf1a48eda33fe",
            "route_table_id": "rtb-0292f90bf496b2305",
            "subnet_id": "subnet-0e9e63d09853311f2"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.routeable.aws_route_table.public-subnet",
            "module.subnets.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend-servers",
      "provider": "module.securitygroups.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:security-group/sg-0b827d2e980bf593e",
            "description": "security group for backend servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b827d2e980bf593e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01a566b9ee752699e"
                ],
                "self": true,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "open db port for webapp",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "open memcached port for webapp",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 11211
              },
              {
                "cidr_blocks": [],
                "description": "open rabbitmq port for webapp",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5672
              },
              {
                "cidr_blocks": [],
                "description": "open webapp port for nginx(frontend) ",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01a566b9ee752699e"
                ],
                "self": true,
                "to_port": 8080
              }
            ],
            "name": "backend-servers",
            "name_prefix": "",
            "owner_id": "091570247959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "backend-servers-sg",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "backend-servers-sg",
              "Project": "vprofile-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d17be156d468e11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securitygroups.aws_security_group.frontend-servers",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend-servers",
      "provider": "module.securitygroups.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:security-group/sg-01a566b9ee752699e",
            "description": "security group for nginx-server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a566b9ee752699e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend-servers",
            "name_prefix": "",
            "owner_id": "091570247959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "frontend-servers-sg",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "frontend-servers-sg",
              "Project": "vprofile-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d17be156d468e11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.subnets.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:subnet/subnet-014c5dc35c59fc660",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014c5dc35c59fc660",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "091570247959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-sub-private",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-sub-private",
              "Project": "vprofile-project"
            },
            "vpc_id": "vpc-08d17be156d468e11"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.subnets.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:subnet/subnet-0fe0c5fae1bc32755",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe0c5fae1bc32755",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "091570247959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-sub-public",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-sub-public",
              "Project": "vprofile-project"
            },
            "vpc_id": "vpc-08d17be156d468e11"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "module.subnets.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:subnet/subnet-0e9e63d09853311f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9e63d09853311f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "091570247959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-sub-public2",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-sub-public2",
              "Project": "vprofile-project"
            },
            "vpc_id": "vpc-08d17be156d468e11"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:vpc/vpc-08d17be156d468e11",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-071e20b55c501915e",
            "default_route_table_id": "rtb-05e5f100f6131cb95",
            "default_security_group_id": "sg-0a2fb0c9639b2d424",
            "dhcp_options_id": "dopt-0ef3da9f8262dfc65",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08d17be156d468e11",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05e5f100f6131cb95",
            "owner_id": "091570247959",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-vpc",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-vpc",
              "Project": "vprofile-project"
            }
          }
        }
      ]
    }
  ]
}